# consulta-djen

./: .gitignore  Intimaçoes 2025-07-01.xlsx  pyproject.toml  response.csv  response.json  resultado.xlsx
.github/: copilot-commit-message-instructions.md
consulta_djen/: __init__.py  __main__.py  cnj.py  types.py  utils.py
consulta_djen/interfaces/: __init__.py  partes.py  publicacao.py
