[project]
name = "consulta-djen"
version = "0.1.0"
description = ""
authors = [{ name = "Robotz213", email = "nicholas@robotz.dev" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pytz>=2025.2",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv>=1.1.1,<2.0.0",
    "tqdm>=4.67.1",
    "clear>=2.0.0",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
